// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filterHistoryEntries > combines alert, event type, and severity filters 1`] = `
[
  {
    "alert": {
      "id": "garage",
      "name": "Garage door",
    },
    "event": {
      "details": {
        "source": "sensor",
      },
      "event_id": "event_garage",
      "message": "The garage is open",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "notification_sent",
    },
    "flow_id": "flow_garage",
  },
]
`;

exports[`filterHistoryEntries > matches search text across the event content 1`] = `
[
  {
    "alert": {
      "id": "water",
      "name": "Water leak",
    },
    "event": {
      "details": {
        "error": "Device unavailable",
      },
      "event_id": "event_water",
      "message": "Could not notify",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "delivery_failed",
    },
  },
]
`;

exports[`filterHistoryEntries > returns all entries when no filters are active 1`] = `
[
  {
    "alert": {
      "id": "garage",
      "name": "Garage door",
    },
    "event": {
      "details": {
        "source": "sensor",
      },
      "event_id": "event_garage",
      "message": "The garage is open",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "notification_sent",
    },
    "flow_id": "flow_garage",
  },
  {
    "alert": {
      "id": "water",
      "name": "Water leak",
    },
    "event": {
      "details": {
        "error": "Device unavailable",
      },
      "event_id": "event_water",
      "message": "Could not notify",
      "timestamp": "2026-01-01T00:00:00+00:00",
      "type": "delivery_failed",
    },
  },
]
`;

exports[`history view element > renders the registered history view 1`] = `
{
  "count": undefined,
  "entries": [
    {
      "badge": "notification sent",
      "hasDetails": true,
      "title": "Garage door",
    },
    {
      "badge": "delivery failed",
      "hasDetails": true,
      "title": "Water leak",
    },
  ],
  "filters": [
    "Filter by event type",
    "Filter by severity",
    "Search history",
  ],
}
`;

exports[`historyDetailSummary > hides attempt-only details from the inline preview 1`] = `""`;

exports[`historyDetailSummary > keeps meaningful detail summaries visible 1`] = `"Device unavailable"`;
